// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnRule renders 0 1`] = `
Array [
  .c0 {
  -webkit-column-rule: 0;
  column-rule: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: 0;
  column-rule: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: 0;
  column-rule: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: 0;
  column-rule: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders function 1`] = `
Array [
  .c0 {
  -webkit-column-rule: hasnot;
  column-rule: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: has;
  column-rule: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: hasnot;
  column-rule: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: has;
  column-rule: has;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-rule: invalid.path.1;
  column-rule: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: invalid.path.1;
  column-rule: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: invalid.path.1;
  column-rule: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: invalid.path.1;
  column-rule: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders negative number 1`] = `
Array [
  .c0 {
  -webkit-column-rule: -54881;
  column-rule: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: -54881;
  column-rule: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: -42365;
  column-rule: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: -42365;
  column-rule: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: July;
    column-rule: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: August;
    column-rule: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: September;
    column-rule: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule: November;
    column-rule: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: July;
    column-rule: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: August;
    column-rule: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: September;
    column-rule: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule: November;
    column-rule: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: May;
    column-rule: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: June;
    column-rule: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: April;
    column-rule: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule: November;
    column-rule: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: May;
    column-rule: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: June;
    column-rule: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-rule: April;
    column-rule: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-rule: November;
    column-rule: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-column-rule: July;
    column-rule: July;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: August;
    column-rule: August;
  }
}

@media January {
  .c0 {
    -webkit-column-rule: September;
    column-rule: September;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: November;
    column-rule: November;
  }
}

@media June {
  .c0 {
    -webkit-column-rule: August;
    column-rule: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-column-rule: July;
    column-rule: July;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: August;
    column-rule: August;
  }
}

@media January {
  .c0 {
    -webkit-column-rule: September;
    column-rule: September;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: November;
    column-rule: November;
  }
}

@media June {
  .c0 {
    -webkit-column-rule: August;
    column-rule: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-rule: January;
    column-rule: January;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: December;
    column-rule: December;
  }
}

@media January {
  .c0 {
    -webkit-column-rule: April;
    column-rule: April;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: May;
    column-rule: May;
  }
}

@media June {
  .c0 {
    -webkit-column-rule: June;
    column-rule: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-rule: January;
    column-rule: January;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: December;
    column-rule: December;
  }
}

@media January {
  .c0 {
    -webkit-column-rule: April;
    column-rule: April;
  }
}

@media April {
  .c0 {
    -webkit-column-rule: May;
    column-rule: May;
  }
}

@media June {
  .c0 {
    -webkit-column-rule: June;
    column-rule: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-column-rule: 54881;
  column-rule: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: 54881;
  column-rule: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: 42365;
  column-rule: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: 42365;
  column-rule: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders string 1`] = `
Array [
  .c0 {
  -webkit-column-rule: July;
  column-rule: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: July;
  column-rule: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: June;
  column-rule: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: June;
  column-rule: June;
}

<div
    className="c0"
  />,
]
`;

exports[`columnRule renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-rule: DarkSlateBlue;
  column-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: DarkSlateBlue;
  column-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: DarkSlateBlue;
  column-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-rule: DarkSlateBlue;
  column-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
